<resources>
    <string name="app_name">Programmer Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="hex">HEX</string>
    <string name="dec">DEC</string>
    <string name="oct">OCT</string>
    <string name="ce">CE</string>
    <string name="bin">BIN</string>
    <string name="_0_main_text">0</string>
    <string name="_0_hex_text">0</string>
    <string name="_0_dec_text">0</string>
    <string name="_0_oct_text">0</string>
    <string name="_0_bin_text">0</string>
    <string name="text_hex">HEX</string>
    <string name="text_dec">DEC</string>
    <string name="text_oct">OCT</string>
    <string name="text_BIN">BIN</string>
</resources>