<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/Bin"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/bin"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Oct"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Oct"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/oct"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Bin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Dec"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Dec"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/dec"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Oct"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Hex"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Hex"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/hex"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Dec"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/line"
        app:layout_constraintBottom_toTopOf="@+id/B" />


    <Button
        android:id="@+id/CE"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button_background"
        android:text="@string/ce"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/hex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/C" />

    <Button
        android:id="@+id/nine"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_9"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/dec"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight" />

    <Button
        android:id="@+id/eight"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_8"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven" />

    <Button
        android:id="@+id/seven"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_7"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/fcsasd"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/six"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_6"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/oct"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five" />

    <Button
        android:id="@+id/fcsasd"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_4"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_5"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fcsasd" />

    <Button
        android:id="@+id/three"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_3"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/bin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two" />

    <Button
        android:id="@+id/two"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_2"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one" />

    <Button
        android:id="@+id/one"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_1"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

        <Button
        android:id="@+id/zero"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/_0"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/A"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/a"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/D"
        app:layout_constraintEnd_toStartOf="@+id/B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/B"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/b"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/E"
        app:layout_constraintEnd_toStartOf="@+id/C"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A" />

    <Button
        android:id="@+id/C"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/c"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/F"
        app:layout_constraintEnd_toStartOf="@+id/CE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/B" />

    <Button
        android:id="@+id/D"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/d"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/E"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/E"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/e"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/F"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/D" />

    <Button
        android:id="@+id/F"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/f"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/hex"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/E" />

    <Button
        android:id="@+id/equals"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="32dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/equals"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero" />

    <Button
        android:id="@+id/hex"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button_background"
        android:text="@string/hex"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/dec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/F" />

    <Button
        android:id="@+id/dec"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button_background"
        android:text="@string/dec"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/oct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine" />

    <Button
        android:id="@+id/oct"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button_background"
        android:text="@string/oct"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six" />

    <Button
        android:id="@+id/bin"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button_background"
        android:text="@string/bin"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three" />

    <TextView
        android:id="@+id/Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0_"
        android:textAlignment="textEnd"
        android:textColor="@color/text"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>